--- a/public/login.html
+++ b/public/login.html
@@ -147,6 +147,9 @@
   </script>
 
   <!-- تحميل الهيدر والفوتر -->
-  <script type="module" src="js/main.js" defer></script>
+  <script type="module" src="js/main.js" defer>
+    <script type="module" src="footer.css" defer>
+      <script type="module" src="header.css" defer>
+  </script>
 </body>
 </html>
