--- a/public/login.html
+++ b/public/login.html
@@ -19,14 +19,14 @@
 </head>
 <body>
 
-  <!-- الهيدر سيتم تحميله تلقائياً -->
+  <!-- الهيدر سيتم تحميله تلقائيًا -->
   <div id="header-placeholder"></div>
 
   <main class="login-page container">
     <h2>تسجيل الدخول</h2>
 
-    <!-- Email Login Form -->
-    <form id="email-login-form" class="login-form">
+    <!-- نموذج تسجيل الدخول -->
+    <form id="loginForm" class="login-form">
       <label for="email">البريد الإلكتروني</label>
       <input type="email" id="email" name="email" placeholder="example@mail.com" autocomplete="email" required>
 
@@ -53,10 +53,10 @@
     </div>
   </main>
 
-  <!-- الفوتر سيتم تحميله تلقائياً -->
+  <!-- الفوتر سيتم تحميله تلقائيًا -->
   <div id="footer-placeholder"></div>
 
-  <!-- Firebase + Auth Script -->
+  <!-- استدعاء سكريبت Firebase و Auth -->
   <script type="module" src="js/auth.js" defer></script>
 
   <!-- تحميل الهيدر والفوتر -->
