--- a/public/login.html
+++ b/public/login.html
@@ -5,8 +5,6 @@
   <title>تسجيل الدخول - CourseHub</title>
 
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/login.css">
 </head>
 
@@ -18,10 +16,10 @@
   <h2>تسجيل الدخول</h2>
 
   <form id="loginForm">
-    <input id="emailInput" type="email" required>
-    <input id="passwordInput" type="password" required>
+    <input id="emailInput" type="email" placeholder="البريد الإلكتروني" required>
+    <input id="passwordInput" type="password" placeholder="كلمة المرور" required>
     <button type="submit">تسجيل الدخول</button>
-    <div id="errorMsg"></div>
+    <div id="errorMsg" class="error-msg"></div>
   </form>
 
   <p>أو</p>
