--- a/public/login.html
+++ b/public/login.html
@@ -15,23 +15,24 @@
 <main class="login-page container">
   <h2>تسجيل الدخول</h2>
 
-  <form id="loginForm">
-    <input id="emailInput" type="email" placeholder="البريد الإلكتروني" required>
-    <input id="passwordInput" type="password" placeholder="كلمة المرور" required>
-    <button type="submit">تسجيل الدخول</button>
+  <form id="loginForm" class="login-form">
+    <input id="email" type="email" placeholder="البريد الإلكتروني" required>
+    <input id="password" type="password" placeholder="كلمة المرور" required>
+
+    <button type="submit" class="btn">تسجيل الدخول</button>
     <div id="errorMsg" class="error-msg"></div>
   </form>
 
-  <p>أو</p>
+  <div class="divider">أو</div>
 
-  <button id="googleLoginBtn" class="google-btn">
+  <button id="googleLogin" class="btn google-btn">
     تسجيل الدخول باستخدام Google
   </button>
 </main>
 
 <div id="footer-placeholder"></div>
 
-<script type="module" src="js/auth.js"></script>
+<script type="module" src="js/login.js"></script>
 <script src="js/main.js" defer></script>
 
 </body>
