--- a/public/login.html
+++ b/public/login.html
@@ -2,38 +2,55 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تسجيل الدخول - CourseHub</title>
 
+  <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/login.css">
+
+  <!-- Firebase SDKs -->
+  <script type="module" src="js/firebase-config.js"></script>
 </head>
 
 <body>
 
-<div id="header-placeholder"></div>
+  <!-- Header -->
+  <div id="header-placeholder"></div>
 
-<main class="login-page container">
-  <h2>تسجيل الدخول</h2>
+  <!-- Main Login Section -->
+  <main class="login-page container">
+    <h2>تسجيل الدخول</h2>
 
-  <form id="loginForm" class="login-form">
-    <input id="email" type="email" placeholder="البريد الإلكتروني" required>
-    <input id="password" type="password" placeholder="كلمة المرور" required>
+    <!-- Email Login Form -->
+    <form id="loginForm" class="login-form">
+      <input id="emailInput" type="email" placeholder="البريد الإلكتروني" required>
+      <input id="passwordInput" type="password" placeholder="كلمة المرور" required>
+      <button type="submit" class="btn">تسجيل الدخول</button>
+      <div id="errorMsg" class="error-msg"></div>
+    </form>
 
-    <button type="submit" class="btn">تسجيل الدخول</button>
-    <div id="errorMsg" class="error-msg"></div>
-  </form>
+    <div class="divider">أو</div>
 
-  <div class="divider">أو</div>
+    <!-- Google Login -->
+    <button id="googleLoginBtn" class="google-btn">
+      <i class="fa-brands fa-google"></i> تسجيل الدخول باستخدام Google
+    </button>
 
-  <button id="googleLogin" class="btn google-btn">
-    تسجيل الدخول باستخدام Google
-  </button>
-</main>
+    <!-- Links -->
+    <div class="login-links">
+      <a href="register.html">إنشاء حساب جديد</a> |
+      <a href="forgot-password.html">نسيت كلمة المرور؟</a>
+    </div>
+  </main>
 
-<div id="footer-placeholder"></div>
+  <!-- Footer -->
+  <div id="footer-placeholder"></div>
 
-<script type="module" src="js/login.js"></script>
-<script src="js/main.js" defer></script>
-
+  <!-- Scripts -->
+  <script type="module" src="js/auth.js"></script>
+  <script src="js/main.js" defer></script>
 </body>
 </html>
