--- a/public/login.html
+++ b/public/login.html
@@ -1,56 +1,45 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>تسجيل الدخول - CourseHub</title>
+<script type="module">
+  // استدعاء Firebase مباشرة من CDN
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-app.js";
+  import { getAuth, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-auth.js";
+  import { getFirestore } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-firestore.js";
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="css/login.css">
+  const firebaseConfig = {
+    apiKey: "AIzaSyCagdZU_eAHebBGCmG5W4FFTcDZIH4wOp0",
+    authDomain: "coursehub-23ed2.firebaseapp.com",
+    projectId: "coursehub-23ed2",
+    storageBucket: "coursehub-23ed2.appspot.com",
+    messagingSenderId: "367073521017",
+    appId: "1:367073521017:web:67f5fd3be4c6407247d3a8"
+  };
 
-  <!-- Firebase SDKs -->
-  <script type="module" src="js/firebase-config.js"></script>
-</head>
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db = getFirestore(app);
+  const googleProvider = new GoogleAuthProvider();
 
-<body>
+  googleProvider.setCustomParameters({ prompt: "select_account" });
 
-  <!-- Header -->
-  <div id="header-placeholder"></div>
+  // Google Login
+  const googleBtn = document.getElementById("googleLoginBtn");
+  googleBtn.addEventListener("click", async () => {
+    try {
+      const result = await signInWithPopup(auth, googleProvider);
+      const user = result.user;
+      console.log(user);
 
-  <!-- Main Login Section -->
-  <main class="login-page container">
-    <h2>تسجيل الدخول</h2>
+      localStorage.setItem("coursehub_user", JSON.stringify({
+        name: user.displayName,
+        email: user.email,
+        picture: user.photoURL,
+        role: "student"
+      }));
 
-    <!-- Email Login Form -->
-    <form id="loginForm" class="login-form">
-      <input id="emailInput" type="email" placeholder="البريد الإلكتروني" required>
-      <input id="passwordInput" type="password" placeholder="كلمة المرور" required>
-      <button type="submit" class="btn">تسجيل الدخول</button>
-      <div id="errorMsg" class="error-msg"></div>
-    </form>
-
-    <div class="divider">أو</div>
-
-    <!-- Google Login -->
-    <button id="googleLoginBtn" class="google-btn">
-      <i class="fa-brands fa-google"></i> تسجيل الدخول باستخدام Google
-    </button>
-
-    <!-- Links -->
-    <div class="login-links">
-      <a href="register.html">إنشاء حساب جديد</a> |
-      <a href="forgot-password.html">نسيت كلمة المرور؟</a>
-    </div>
-  </main>
-
-  <!-- Footer -->
-  <div id="footer-placeholder"></div>
-
-  <!-- Scripts -->
-  <script type="module" src="js/auth.js"></script>
-  <script src="js/main.js" defer></script>
-</body>
-</html>
+      window.location.href = "index.html";
+    } catch (err) {
+      console.error(err);
+      alert("فشل تسجيل الدخول عبر Google: " + err.message);
+    }
+  });
+</script>
