--- a/public/login.html
+++ b/public/login.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <script type="module">
   // استدعاء Firebase مباشرة من CDN
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-app.js";
