--- a/public/login.html
+++ b/public/login.html
@@ -1,9 +1,43 @@
 <!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>تسجيل الدخول - CourseHub</title>
 
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/login.css">
+</head>
+<body>
+
+<div id="header-placeholder"></div>
+
+<main class="login-page container">
+  <h2>تسجيل الدخول</h2>
+
+  <form id="loginForm">
+    <input id="emailInput" type="email" placeholder="البريد الإلكتروني" required>
+    <input id="passwordInput" type="password" placeholder="كلمة المرور" required>
+    <button type="submit">تسجيل الدخول</button>
+    <div id="errorMsg" class="error-msg"></div>
+  </form>
+
+  <p>أو</p>
+
+  <button id="googleLoginBtn" class="google-btn">
+    تسجيل الدخول باستخدام Google
+  </button>
+</main>
+
+<div id="footer-placeholder"></div>
+
+<!-- Firebase + Auth -->
 <script type="module">
-  // استدعاء Firebase مباشرة من CDN
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-app.js";
-  import { getAuth, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-auth.js";
+  import { getAuth, GoogleAuthProvider, signInWithPopup, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-auth.js";
   import { getFirestore } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-firestore.js";
 
   const firebaseConfig = {
@@ -15,12 +49,10 @@
     appId: "1:367073521017:web:67f5fd3be4c6407247d3a8"
   };
 
-  // Initialize Firebase
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
   const db = getFirestore(app);
   const googleProvider = new GoogleAuthProvider();
-
   googleProvider.setCustomParameters({ prompt: "select_account" });
 
   // Google Login
@@ -29,7 +61,6 @@
     try {
       const result = await signInWithPopup(auth, googleProvider);
       const user = result.user;
-      console.log(user);
 
       localStorage.setItem("coursehub_user", JSON.stringify({
         name: user.displayName,
@@ -44,4 +75,33 @@
       alert("فشل تسجيل الدخول عبر Google: " + err.message);
     }
   });
+
+  // Email Login
+  const form = document.getElementById("loginForm");
+  const emailInput = document.getElementById("emailInput");
+  const passwordInput = document.getElementById("passwordInput");
+  const errorMsg = document.getElementById("errorMsg");
+
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    try {
+      const cred = await signInWithEmailAndPassword(auth, emailInput.value, passwordInput.value);
+      const user = cred.user;
+
+      localStorage.setItem("coursehub_user", JSON.stringify({
+        email: user.email,
+        uid: user.uid,
+        role: "student"
+      }));
+
+      window.location.href = "index.html";
+    } catch (err) {
+      console.error(err);
+      errorMsg.textContent = "بيانات الدخول غير صحيحة";
+    }
+  });
 </script>
+
+<script src="js/main.js" defer></script>
+</body>
+</html>
