--- a/public/login.html
+++ b/public/login.html
@@ -7,28 +7,33 @@
   <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-  <div id="header-placeholder"></div>
 
-  <main class="login-page container">
-    <h2>تسجيل الدخول</h2>
+<div id="header-placeholder"></div>
 
-    <form id="loginForm">
-      <input id="emailInput" type="email" placeholder="البريد الإلكتروني" required>
-      <input id="passwordInput" type="password" placeholder="كلمة المرور" required>
-      <button type="submit">تسجيل الدخول</button>
-      <div id="errorMsg" class="error-msg"></div>
-    </form>
+<main class="login-page container">
+  <h2>تسجيل الدخول</h2>
 
-    <p>أو</p>
+  <form id="loginForm">
+    <input id="emailInput" type="email" placeholder="البريد الإلكتروني" required>
+    <input id="passwordInput" type="password" placeholder="كلمة المرور" required>
+    <button type="submit">تسجيل الدخول</button>
+    <div id="errorMsg" class="error-msg"></div>
+  </form>
 
-    <button id="googleLoginBtn" class="google-btn">
-      تسجيل الدخول باستخدام Google
-    </button>
-  </main>
+  <p>أو</p>
 
-  <div id="footer-placeholder"></div>
+  <button id="googleLoginBtn" class="google-btn">تسجيل الدخول باستخدام Google</button>
 
-  <script type="module" src="js/auth.js"></script>
-  <script src="js/main.js" defer></script>
+  <p class="login-links">
+    <a href="register.html">إنشاء حساب جديد</a> | 
+    <a href="forgot-password.html">نسيت كلمة المرور؟</a>
+  </p>
+</main>
+
+<div id="footer-placeholder"></div>
+
+<script type="module" src="js/auth.js"></script>
+<script src="js/main.js" defer></script>
+
 </body>
 </html>
