--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -1,40 +1,32 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-     <link rel="stylesheet" href="header.css">
-
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>استعادة كلمة المرور - CourseHub</title>
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<script src="js/main.js" defer></script>
+  <meta charset="UTF-8">
+  <title>إعادة تعيين كلمة المرور - CourseHub</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
 
-<!-- Google Init -->
-<div id="g_id_onload"
-     data-client_id="367073521017-na5sqgdpp98hqrd6us63l4117l4vbacm.apps.googleusercontent.com"
-     data-callback="handleGoogleLogin"
-     data-auto_prompt="false">
-</div>
-
-<!-- Header Placeholder -->
 <div id="header-placeholder"></div>
 
-<!-- Main Section -->
-<section class="course-detail container">
-  <h2>استعادة كلمة المرور</h2>
-  <form>
-    <label for="email">البريد الإلكتروني المسجل</label>
-    <input type="email" id="email" name="email" placeholder="example@mail.com" required>
-    <button class="btn" type="submit">إرسال رابط الاستعادة</button>
-  </form>
-  <p>تذكرت كلمة المرور؟ <a href="login.html">تسجيل الدخول</a></p>
-</section>
+<main class="login-page container">
+  <h2>إعادة تعيين كلمة المرور</h2>
 
-<!-- Footer Placeholder -->
+  <form id="forgotForm">
+    <input id="forgotEmail" type="email" placeholder="البريد الإلكتروني" required>
+    <button type="submit">إرسال رابط إعادة التعيين</button>
+  </form>
+
+  <p class="login-links">
+    <a href="login.html">تسجيل الدخول</a>
+  </p>
+</main>
+
 <div id="footer-placeholder"></div>
+
+<script type="module" src="js/auth.js"></script>
+<script src="js/main.js" defer></script>
 
 </body>
 </html>
