--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <!-- Main JS (تحميل الهيدر والفوتر وإدارة حالة المستخدم) -->
-  <script src="js/main.js" defer></script>
+  <script src="./js/main.js" defer></script>
 </head>
 
 <body>
@@ -65,7 +65,7 @@
     <div class="courses-grid">
 
       <div class="card">
-        <img src="assets/images/course1.jpg" alt="تطوير الويب للمبتدئين">
+        <img src="./assets/images/course1.jpg" alt="تطوير الويب للمبتدئين">
         <div class="card-content">
           <h3>تطوير الويب للمبتدئين</h3>
           <p>تعلم HTML و CSS و JavaScript خطوة بخطوة.</p>
@@ -74,7 +74,7 @@
       </div>
 
       <div class="card">
-        <img src="assets/images/course2.jpg" alt="الذكاء الاصطناعي">
+        <img src="./assets/images/course2.jpg" alt="الذكاء الاصطناعي">
         <div class="card-content">
           <h3>الذكاء الاصطناعي</h3>
           <p>ابدأ رحلتك مع تعلم الآلة والذكاء الاصطناعي.</p>
@@ -83,7 +83,7 @@
       </div>
 
       <div class="card">
-        <img src="assets/images/course3.jpg" alt="التصميم الجرافيكي">
+        <img src="./assets/images/course3.jpg" alt="التصميم الجرافيكي">
         <div class="card-content">
           <h3>التصميم الجرافيكي</h3>
           <p>تعلم Photoshop و Illustrator من الصفر.</p>
