--- a/login.html
+++ b/login.html
@@ -42,38 +42,6 @@
   <div id="footer-placeholder"></div>
 
   <!-- Firebase + Auth -->
-  <script type="module">
-    import { auth, googleProvider } from './js/firebase-config.js';
-    import { signInWithEmailAndPassword, signInWithPopup } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
-
-    const loginForm = document.getElementById('loginForm');
-    const emailInput = document.getElementById('emailInput');
-    const passwordInput = document.getElementById('passwordInput');
-    const errorMsg = document.getElementById('errorMsg');
-    const googleLoginBtn = document.getElementById('googleLoginBtn');
-
-    // تسجيل دخول بالبريد وكلمة المرور
-    loginForm.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      errorMsg.textContent = '';
-      try {
-        await signInWithEmailAndPassword(auth, emailInput.value, passwordInput.value);
-        window.location.href = 'index.html'; // إعادة التوجيه بعد تسجيل الدخول
-      } catch (error) {
-        errorMsg.textContent = error.message;
-      }
-    });
-
-    // تسجيل دخول باستخدام Google
-    googleLoginBtn.addEventListener('click', async () => {
-      errorMsg.textContent = '';
-      try {
-        await signInWithPopup(auth, googleProvider);
-        window.location.href = 'index.html';
-      } catch (error) {
-        errorMsg.textContent = error.message;
-      }
-    });
-  </script>
+  <script type="module" src="js/auth.js"></script>
 </body>
 </html>
