--- a/index.html
+++ b/index.html
@@ -3,99 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>CourseHub - تعلم واحصل على شهادتك</title>
-  <meta name="description" content="CourseHub – تعلم أي مهارة، احصل على شهادتك، وابدأ رحلتك التعليمية الآن.">
-  <meta name="keywords" content="دورات, تعلم, شهادة, كورس, تطوير, تصميم, AI">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="css/header.css">
+  <title>CourseHub - الصفحة الرئيسية</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
-
-  <!-- Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-  <!-- Main JS (تحميل الهيدر والفوتر وإدارة حالة المستخدم) -->
-  <script src="js/main.js" defer></script>
 </head>
-
 <body>
-
-  <!-- Header -->
   <div id="header-placeholder"></div>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-content">
-      <h1>ابدأ رحلتك التعليمية الآن!</h1>
-      <p>انضم إلى آلاف الطلاب وطور مهاراتك بسرعة مع دوراتنا الاحترافية.</p>
-      <a href="courses.html" class="btn btn-hero">استكشف الدورات</a>
-    </div>
-  </section>
+  <main>
+    <h1>مرحبًا في CourseHub</h1>
+    <p>تعلم أي مهارة واحصل على شهادتك بسهولة.</p>
+  </main>
 
-  <!-- Features -->
-  <section class="features container">
-    <div class="feature">
-      <i class="fa fa-users fa-2x"></i>
-      <h3>آلاف الطلاب</h3>
-      <p>انضم إلى مجتمع ضخم من المتعلمين حول العالم.</p>
-    </div>
-
-    <div class="feature">
-      <i class="fa fa-certificate fa-2x"></i>
-      <h3>شهادات معتمدة</h3>
-      <p>احصل على شهادة رسمية عند إتمام الدورة بنجاح.</p>
-    </div>
-
-    <div class="feature">
-      <i class="fa fa-laptop-code fa-2x"></i>
-      <h3>دورات احترافية</h3>
-      <p>تعلم من خبراء وابدأ مسارك المهني بسرعة.</p>
-    </div>
-  </section>
-
-  <!-- Popular Courses -->
-  <section class="popular-courses container">
-    <h2>الدورات الأكثر شعبية</h2>
-
-    <div class="courses-grid">
-
-      <div class="card">
-        <img src="assets/images/course1.jpg" alt="تطوير الويب للمبتدئين">
-        <div class="card-content">
-          <h3>تطوير الويب للمبتدئين</h3>
-          <p>تعلم HTML و CSS و JavaScript خطوة بخطوة.</p>
-          <a href="course-detail.html" class="btn btn-card">عرض الدورة</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <img src="assets/images/course2.jpg" alt="الذكاء الاصطناعي">
-        <div class="card-content">
-          <h3>الذكاء الاصطناعي</h3>
-          <p>ابدأ رحلتك مع تعلم الآلة والذكاء الاصطناعي.</p>
-          <a href="course-detail.html" class="btn btn-card">عرض الدورة</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <img src="assets/images/course3.jpg" alt="التصميم الجرافيكي">
-        <div class="card-content">
-          <h3>التصميم الجرافيكي</h3>
-          <p>تعلم Photoshop و Illustrator من الصفر.</p>
-          <a href="course-detail.html" class="btn btn-card">عرض الدورة</a>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Footer -->
   <div id="footer-placeholder"></div>
 
+  <script src="js/main.js"></script>
+  <script src="js/auth-guard.js"></script>
 </body>
 </html>
