--- a/login.html
+++ b/login.html
@@ -2,46 +2,30 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تسجيل الدخول - CourseHub</title>
-
-  <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/login.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="css/login.css">
-
-  <!-- تحميل الهيدر والفوتر -->
-  <script src="js/main.js" defer></script>
 </head>
-
 <body>
-
-  <!-- Header ديناميكي -->
   <div id="header-placeholder"></div>
 
-  <main class="login-page container">
+  <main>
     <h2>تسجيل الدخول</h2>
-
-    <!-- تسجيل الدخول بالبريد -->
-    <form id="loginForm">
-      <input id="emailInput" type="email" placeholder="البريد الإلكتروني" required>
-      <input id="passwordInput" type="password" placeholder="كلمة المرور" required>
-      <button type="submit">تسجيل الدخول</button>
-      <div id="errorMsg" class="error-msg"></div>
+    <form id="login-form">
+      <label for="email">البريد الإلكتروني</label>
+      <input type="email" name="email" id="email" required>
+      <label for="password">كلمة المرور</label>
+      <input type="password" name="password" id="password" required>
+      <button type="submit">دخول</button>
     </form>
-
-    <p>أو</p>
-
-    <!-- تسجيل الدخول بـ Google -->
-    <button id="googleLoginBtn" class="google-btn">
-      تسجيل الدخول باستخدام Google
-    </button>
   </main>
 
-  <!-- Footer ديناميكي -->
   <div id="footer-placeholder"></div>
 
-  <!-- Firebase + Auth -->
-  <script type="module" src="js/auth.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/auth.js"></script>
 </body>
 </html>
